# __rultor

./: .rultor.yml  Cargo.toml  README.md
.github/workflows/: build_n_test.yml  publish.yml
src/: lib.rs
