[package]
name = "bevy_actify_derive"
version = "0.2.0"
edition = "2024"
authors = ["iizudev<izudev@yandex.ru>"]
license = "MIT OR Apache-2.0"
description = "bevy_actify's derive macros"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
